@@ -241,6 +241,10 @@ CONFIGURATION
     Set this option to e.g. ImageDescription to use this field as comments
     for images.
 
+    GalleryEnableMediaRss
+    Set this option to 1 to enable generation of a media RSS feed. This can
+    be used e.g. together with the PicLens plugin from http://piclens.com
+
 FEATURES
     Rotate images
         Some cameras, like the Canon G3, detects the orientation of a
